# planets_simulator

./: Cargo.toml  LICENSE  README.md
src/: geometry.rs  main.rs  planet.rs
src/app/: app.rs  mod.rs
src/app/graphics/: gpu_resources.rs  graphycs_geometry.rs  mod.rs  planet.rs  screen.rs  surface.rs
src/app/states/: ball.rs  cube.rs  green_screen.rs  mod.rs  moving_ball.rs  planets.rs  triangle.rs
src/app/states/configs/: planets.json
src/app/states/shaders/: ball.wgsl  cube.wgsl  moving_ball.wgsl  planets.wgsl
src/physics/: ball.rs  coords.rs  cube.rs  geometry.rs  mod.rs
