[package]
name = "planets_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
convexhull3d = "0.5.0"
env_logger = "0.11.8"
glam = "0.30.9"
image = "0.25.9"
nalgebra = "0.34.1"
pollster = "0.4.0"
serde = "1.0.228"
serde_json = "1.0.147"
wgpu = "27.0.1"
winit = "0.30.12"
